# Stella

./: .gitmodules  README.md
Stella/: CMakeLists.txt
Stella/lib/glad/include/glad/: glad.h
Stella/lib/glad/src/: glad.c
Stella/src/: Stella.h  StellaConfig.h
Stella/src/Stella/: EngineState.cpp  EngineState.h
Stella/src/Stella/Core/Assert/: Assert.h
Stella/src/Stella/Core/Common/: Common.h
Stella/src/Stella/Core/Logger/: Logger.cpp  Logger.h
Stella/src/Stella/Core/Memory/PoolAllocator/: PoolAllocator.h
Stella/src/Stella/Core/Strings/: Strings.cpp  Strings.h
Stella/src/Stella/Debug/Print/: Print.cpp  Print.h
Stella/src/Stella/EngineAssets/Shaders/BasicQuad/: BasicQuad.frag  BasicQuad.vert
Stella/src/Stella/EngineAssets/Shaders/FullScreenQuad/: FullScreenQuad.frag  FullScreenQuad.vert
Stella/src/Stella/EngineAssets/Shaders/QuadRenderer/: QuadRenderer.frag  QuadRenderer.vert
Stella/src/Stella/Math/: Math2D.cpp  Math2D.h
Stella/src/Stella/Math/Ray2D/: Ray2D.h
Stella/src/Stella/Platform/Path/: Path.cpp  Path.h
Stella/src/Stella/Platform/Window/: Window.cpp  Window.h
Stella/src/Stella/Renderer/Camera/: Camera.cpp  Camera.h
Stella/src/Stella/Renderer/Framebuffer/: Framebuffer.cpp  Framebuffer.h
Stella/src/Stella/Renderer/MeshRenderer/: MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h
Stella/src/Stella/Renderer/QuadRenderer/: QuadRenderer.cpp  QuadRenderer.h
Stella/src/Stella/Renderer/Shader/: Shader.cpp  Shader.h
Stella/src/Stella/Renderer/Sprite/: Sprite.cpp  Sprite.h
Stella/src/Stella/Renderer/SpriteRenderer/: SpriteRenderer.cpp  SpriteRenderer.h
Stella/src/Stella/Renderer/Texture/: Texture.cpp  Texture.h
Stella/src/Stella/Renderer/Transform/: Transform.h
Stella/src/Stella/Resources/ResourceManager/: ResourceManager.cpp  ResourceManager.h
Stella/src/Stella/Resources/ShaderManager/: ShaderManager.cpp  ShaderManager.h
Stella/src/Stella/Resources/TextureManager/: TextureManager.cpp  TextureManager.h
Stella/src/Stella/Systems/Component/: Component.cpp  Component.h
Stella/src/Stella/Systems/DeltaTime/: DeltaTime.cpp  DeltaTime.h
Stella/src/Stella/Systems/ModelManager/: ModelManager.cpp  ModelManager.h
Stella/src/Stella/Systems/NativeScriptBase/: NativeScriptBase.h
Stella/src/Stella/Systems/Scene/: Scene.cpp  Scene.h
Stella/src/Stella/Systems/SpriteManager/: SpriteManager.cpp  SpriteManager.h
Tests/Sandbox/: CMakeLists.txt  opencl_kernel.cl
Tests/Sandbox/Assets/Shaders/TestShader/: TestShader.frag  TestShader.vert
Tests/Sandbox/src/: Sandbox.h  SandboxConfig.h  main.cpp
Tests/Sandbox/src/Sandbox/NativeScripts/PointSourceScript/: PointSourceScript.cpp  PointSourceScript.h
Tests/Sandbox/src/Sandbox/Startup/: Startup.cpp  Startup.h
Tests/Sandbox/src/Sandbox/Utils/: Utils.cpp  Utils.h
